# Helldivers

./: LICENSE  README.md
backend/: .dockerignore  Dockerfile  ENV_EXAMPLE.md  README.md  apiVersion.md  fly.toml  pyproject.toml  requirements.txt
backend/api/v1/: urls.py
backend/armory/: apps.py  signals.py  urls.py
backend/armory/admin/: __init__.py  armor.py  battlepass.py  cape.py  helmet.py  pass.py  passive.py  set.py  user_component_relations.py  user_set_relation.py
backend/armory/filters/: __init__.py  armor.py
backend/armory/migrations/: 0001_initial.py  0002_armorset_image.py  0003_alter_armor_source_alter_cape_source_and_more.py  0004_alter_armor_fields_to_integer.py  0005_userarmorsetrelation.py  0006_battlepass_armor_pass_field_cape_pass_field_and_more.py  0007_passive_image.py  0008_add_pt_br_translations.py  0009_update_source_field_max_length.py  0010_alter_armorset_cape.py  0012_stratagem.py  (+8 more)
backend/booster/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/common/: admin.py  models.py  signals.py
backend/core/: __init__.py  settings.py  settings_prod.py  urls.py
backend/docs/: ARMORY.md  ARQUITETURA.md  AUTENTICACAO.md  DEPLOY.md  INTERNACIONALIZACAO.md  USUARIOS.md
backend/stratagems/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/users/: adapters.py  admin.py  authentication.py  signals.py  urls.py  utils.py  utils_oauth.py
backend/warbonds/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/weaponry/: admin.py  models.py  serializers.py  urls.py  views.py
(+219 files in other folders)
